# enesys

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERSION  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: FORMULAS.md  HOWTO_RUN.md  PARAM_SETS.md  QUICKSTART.md  SOURCES.md  VERSIONING.md
docs/methodik/: bridge_phase_parameters.md  methodology.md  modell_architektur.md  steady_state_parameter_konsistenz.md
examples/: generate_chart_lcoe_trajectory.py  generate_chart_mix_rampup.py  generate_chart_monte_carlo.py  generate_chart_nuclear_build_time_empirics.py  generate_chart_stress_rampup.py  generate_chart_tornado_sensitivity.py
notebooks/: 01_quickstart.ipynb
src/enesys/: __init__.py  __main__.py  version.py
src/enesys/core/: __init__.py  camp_ranges.py  demand.py  dispatch.py  fuel.py  lcoe.py  path_aggregations.py  path_ids.py  path_inputs.py  path_model.py  path_sensitivity.py  realization_belief.py  regret_decision_tree.py  rolling_lcoe.py  sector_coupling.py  sensitivity.py  source_trace.py  system_state.py  wacc.py
src/enesys/core/inventories/: __init__.py  demand_curves.py  fuel_inventory.py  path_policy.py  tech_inventory.py
src/enesys/core/param_sets/: __init__.py  _base.py  _template.py  ariadne_pypsa.py
src/enesys/extensions/: __init__.py  consumer_bridge.py  consumers.py  landuse.py  multicriteria.py  profile_costs.py  winter_stress.py
src/enesys/viz/: __init__.py  brand.py  matplotlib_style.py  plotly_style.py  theme.py
src/enesys/viz/charts/: __init__.py  _helpers.py  build_time.py  montecarlo.py  rampup.py  stress.py  tornado.py  trajectory.py
tests/architecture/: test_demand_curves_realization_rate_sync.py
tests/consistency/: test_ariadne_convergence.py  test_coverage_matrix.py  test_mypy_clean.py  test_path_model_stress.py  test_quickstart_snippets.py  test_ruff_clean.py  test_version_consistency.py
tests/core/: test_camp_consistency.py  test_fuel_split.py  test_monte_carlo_ee_h2_vs_kkw_gas.py  test_regret_decision_tree.py  test_rolling_lcoe.py  test_sector_coupling_external.py  test_source_trace_docstring.py  test_source_traceability.py  test_version.py  test_wacc_consistency.py
tests/extensions/: test_consumers_bridge.py  test_external_sources.py  test_landuse_consistency.py  test_multicriteria.py  test_profile_cost_sensi_axis.py  test_winter_stress_worst_case.py
